# WhatToDoNow

./: CMakeLists.txt  README.md  build
.github/workflows/: ccpp.yml
src/: Main.cc  Work.cc  Work.h  WorksQueue.cc  WorksQueue.h
